# backend/src/dtos/user.dto.ts
@@ -1,0 +1,8 @@
+export interface UserResponseType {
+  _id: string;
+  name: string;
+  email: string;
+  role: 'admin' | 'editor';
+  createdAt: Date;
+  updatedAt: Date;
+}
